--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -43,35 +43,37 @@
   </div>
   </span>
   <div class='mainArea'>
-  <div class='spinnerBackground'></div>
-  <div class='spinner fixed'></div>
-  <strong><font size='3'></strong></font>
-  <div class='searchArea onlyShowWithFeed'><span id='searchFilter'><input type='text' id='searchBox' placeholder='<?tr('Search');?>'><span class='searchSubmit' onclick='doSearch(true)'><i id='searchButton' class='fa fa-search fa-lg'></i></span><span class='caButton maxPerPage' id='maxPerPage' style='display:none;'></span></div>
-  <div id="Category" class="categoryLine">&nbsp;</div>
-  <div class='dockerSearch' style='display:none'><a class='initDockerSearch'><?tr("Click Here To Get More Results From DockerHub");?></a></div>
-  <div id='sortIconArea' style='display:none;'><?tr("Sort By:");?> <a id='defaultSort' class='sortIcons enabledIcon' data-sortBy='Name' data-sortDir='Up'><?tr("Name Ascending");?></a><a class='sortIcons' data-sortBy='Name' data-sortDir='Down'><?tr("Name Descending");?></a><a class='sortIcons' data-sortBy='downloads' data-sortDir='Down'><?tr("Downloads");?></a><a class='sortIcons' data-sortBy='FirstSeen' data-sortDir='Down'><?tr("Date Added");?></a></span></div>
-  <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete");?>'></input></div>
-  <div id='templates_content'><div class='ca_templatesDisplay'><font size='6'><?tr("Updating Content");?></font></div></div>
-  <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete");?>'></input></div>
-  <span id='debugging'></span>
-  <span id='caCredits' style='display:none;'>
-    <div class='credits'>
-      <div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div>
-      <div class='ca_center'><font size='5'>Community Applications</font></div>
-      <div class='ca_center ca_creditheader'><?tr("Development");?></div>
-      <div class='ca_center ca_credit'>Andrew Zawadzki</div>
-      <div class='ca_center ca_creditheader'><?tr("Additional Contributions");?></div>
-      <div class='ca_center ca_credit'>bonienl, Lime Technology Inc</div>
-      <div class='ca_center ca_creditheader'><?tr("GUI Layout Design");?></div>
-      <div class='ca_center ca_credit'>Magnus Engø</div>
-      <div class='ca_center ca_creditheader'><?tr("Application Feed");?></div>
-      <div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Lime Technology Inc</div>
-      <div class='ca_center ca_creditheader'><?tr("Additional Testing");?></div>
-      <div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Lime Technology Inc, SimonF, ich777, jimmy898, Alex.b, neruve, Eugeni_CAT, ChaseCares, TheEyeTGuy, dlandon</div>
-      <div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
-      <div class='ca_center ca_credit'>Awesomeplete (Lea Verou)<br>Chart.js (various)<br>chartjs-plugin-trendline (Marcus Alsterfjord)<br>XML2Array/Array2XML (Miles Johnson)<br>Magnific-Popup (Dmytro Semenov)</div>
-      <br>
-      <div class='ca_center ca_italic'><font size='1rem;'><?tr("Copyright");?> &copy; 2020-2025 Lime Technology, 2015-2025 Andrew Zawadzki</font></div>
-    </div>
-  </span>
+    <div class='spinnerBackground'></div>
+    <div class='spinner fixed'></div>
+    <strong><font size='3'></strong></font>
+    <div class='searchArea onlyShowWithFeed'><span id='searchFilter'><input type='text' id='searchBox' placeholder='<?tr('Search');?>'><span class='searchSubmit' onclick='doSearch(true)'><i id='searchButton' class='fa fa-search fa-lg'></i></span><span class='caButton maxPerPage' id='maxPerPage' style='display:none;'></span></div>
+    <div id="Category" class="categoryLine">&nbsp;</div>
+    <div class='dockerSearch' style='display:none'><a class='initDockerSearch'><?tr("Click Here To Get More Results From DockerHub");?></a></div>
+    <div id='sortIconArea' style='display:none;'><?tr("Sort By:");?> <a id='defaultSort' class='sortIcons enabledIcon' data-sortBy='Name' data-sortDir='Up'><?tr("Name Ascending");?></a><a class='sortIcons' data-sortBy='Name' data-sortDir='Down'><?tr("Name Descending");?></a><a class='sortIcons' data-sortBy='downloads' data-sortDir='Down'><?tr("Downloads");?></a><a class='sortIcons' data-sortBy='FirstSeen' data-sortDir='Down'><?tr("Date Added");?></a></span></div>
+    <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete");?>'></input></div>
+    <div id='templates_content'><div class='ca_templatesDisplay'><font size='6'><?tr("Updating Content");?></font></div></div>
+    <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete");?>'></input></div>
   </div>
+</div>
+<div id='alternateView' style='display:none;'></div>
+<div id='caCredits' style='display:none;'>
+  <div class='credits'>
+    <div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div>
+    <div class='ca_center'><font size='5'>Community Applications</font></div>
+    <div class='ca_center ca_creditheader'><?tr("Development");?></div>
+    <div class='ca_center ca_credit'>Andrew Zawadzki</div>
+    <div class='ca_center ca_creditheader'><?tr("Additional Contributions");?></div>
+    <div class='ca_center ca_credit'>bonienl, Lime Technology Inc</div>
+    <div class='ca_center ca_creditheader'><?tr("GUI Layout Design");?></div>
+    <div class='ca_center ca_credit'>Magnus Engø</div>
+    <div class='ca_center ca_creditheader'><?tr("Application Feed");?></div>
+    <div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Lime Technology Inc</div>
+    <div class='ca_center ca_creditheader'><?tr("Additional Testing");?></div>
+    <div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Lime Technology Inc, SimonF, ich777, jimmy898, Alex.b, neruve, Eugeni_CAT, ChaseCares, TheEyeTGuy, dlandon</div>
+    <div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
+    <div class='ca_center ca_credit'>Awesomeplete (Lea Verou)<br>Chart.js (various)<br>chartjs-plugin-trendline (Marcus Alsterfjord)<br>XML2Array/Array2XML (Miles Johnson)<br>Magnific-Popup (Dmytro Semenov)</div>
+    <br>
+    <div class='ca_center ca_italic'><font size='1rem;'><?tr("Copyright");?> &copy; 2020-2025 Lime Technology, 2015-2025 Andrew Zawadzki</font></div>
+  </div>
+</div>
+<span id='debugging'></span>
