--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -1,4 +1,7 @@
 <div class='ca_display_area'>
+  <div class='menuItemsHidden'>
+    <div class='showMenuButton'></div>
+  </div>
   <div class='menuItems'>
     <ul class='caMenu '>
       <li class='startupButton caMenuItem onlyShowWithFeed' data-category='new'><?tr("Home");?></li>
@@ -51,17 +54,20 @@
         <span class='searchSubmit' onclick='doSearch(true)'><i id='searchButton' class='fa fa-search fa-lg'></i></span>
         <span class='caButton maxPerPage' id='maxPerPage' style='display:none;'></span>
       </span>
+      <div class='dockerSearch caButton' style='display:none'><?tr("Search DockerHub");?></div>
+      <div class='templateSearch caButton' style='display:none'><?tr("Search Apps")?></div>
     </div>
     <div id="Category" class="categoryLine">&nbsp;</div>
-    <div class='dockerSearch caButton' style='display:none'><?tr("Search DockerHub");?></div>
-    <div class='dockerSearchTemplate' style='display:none'><div class='dockerSearchNote'><?tr("NOTE You must visit the dockerHub page to gather the information required to install correctly")?></div><div class='templateSearch caButton'><?tr("Search Apps")?></div></div>
     <div id='sortIconArea' style='display:none;'><?tr("Sort By:");?> <a id='defaultSort' class='sortIcons enabledIcon' data-sortBy='Name' data-sortDir='Up'><?tr("Name Ascending");?></a><a class='sortIcons' data-sortBy='Name' data-sortDir='Down'><?tr("Name Descending");?></a><a class='sortIcons' data-sortBy='downloads' data-sortDir='Down'><?tr("Downloads");?></a><a class='sortIcons' data-sortBy='FirstSeen' data-sortDir='Down'><?tr("Date Added");?></a></div>
     <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete");?>'></input></div>
     <div id='templates_content'><div class='ca_templatesDisplay'><font size='6'><?tr("Updating Content");?></font></div></div>
     <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete");?>'></input></div>
   </div>
 </div>
-<div id='alternateView' style='display:none;'></div>
+<div id='alternateView' style='display:none;'>
+  <div class='caButton alternateViewClose'><?tr("CLOSE");?></div>
+  <div class='alternateViewContent'></div>
+</div>
 <div id='caCredits' style='display:none;'>
   <div class='credits'>
     <div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div>
