--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -6,16 +6,16 @@
     <ul class='caMenu '>
       <li class='startupButton caMenuItem onlyShowWithFeed' data-category='new'><?tr("Home");?></li>
       <li><hr class='onlyShowWithFeed'/></li>
-      <li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='installed_apps'><?tr("Installed Apps");?></li>
-      <ul class='subCategory onlyShowWithFeed'>
-        <li class='caMenuItem sectionMenu onlyShowWithFeed dockerSpecific' data-category='inst_docker'><?tr("Docker");?></li>
-        <li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='inst_plugins'><?tr("Plugins");?></li>
-      </ul>
+      <li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='installed_apps'><?tr("Installed Apps");?>
+      <li class='subCategory onlyShowWithFeed'>
+        <ul class='caMenuItem sectionMenu onlyShowWithFeed dockerSpecific' data-category='inst_docker'><?tr("Docker");?></ul>
+        <ul class='caMenuItem sectionMenu onlyShowWithFeed' data-category='inst_plugins'><?tr("Plugins");?></ul>
+      </li>
       <li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='previous_apps'><?tr("Previous Apps");?></li>
-      <ul class='subCategory onlyShowWithFeed'>
-        <li class='caMenuItem sectionMenu dockerSpecific' data-category='prev_docker'><?tr("Docker");?></li>
-        <li class='caMenuItem sectionMenu' data-category='prev_plugins'><?tr("Plugins");?></li>
-      </ul>
+      <li class='subCategory onlyShowWithFeed'>
+        <ul class='caMenuItem sectionMenu dockerSpecific' data-category='prev_docker'><?tr("Docker");?></ul>
+        <ul class='caMenuItem sectionMenu' data-category='prev_plugins'><?tr("Plugins");?></ul>
+      </li>
       <li class='caMenuItem sectionMenu caPinnedMenu onlyShowWithFeed' data-category='pinned_apps'><?tr("Pinned Apps");?></li>
       <li class='caMenuItem favouriteRepo onlyShowWithFeed'><?tr("Favourite Repo");?></li>
       <li class='caMenuItem sectionMenu actionCentre onlyShowWithFeed' style='display:none;' data-category='action_centre'><?tr("Action Centre");?></li>
