--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -50,7 +50,7 @@
         <li class='caMenuItem'><a class='caMenuItem' href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' target='_blank' style='text-decoration:none;color:inherit;'><?tr("Support");?></a></li>
         <li><hr class='category_hr'/></li>
         <li><?=tr("VERSION");?></li>
-        <li class='caMenuItem caChangeLog noSelect'><span id='caInstalledVersion'></span></li>
+        <li><span id='caInstalledVersion'></span></li>
         <li class='caMenuItem caChangeLog noSelect'><?tr("Change Log");?></li>
         <?if ($md5Error):?>
         <br>
